# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-chi2]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.7529 ┆ 0.6577 ┆ … ┆ 0.9344 ┆ 0.8224 ┆ 0.6325 ┆ 1.0967 │
  │ 2   ┆ 0.7529 ┆ 0.0    ┆ 0.7303 ┆ … ┆ 1.0541 ┆ 0.6667 ┆ 0.7928 ┆ 0.6387 │
  │ 3   ┆ 0.6577 ┆ 0.7303 ┆ 0.0    ┆ … ┆ 0.6424 ┆ 0.5578 ┆ 1.0142 ┆ 1.0377 │
  │ 4   ┆ 0.6325 ┆ 1.0377 ┆ 0.8228 ┆ … ┆ 1.1952 ┆ 0.767  ┆ 0.866  ┆ 1.4142 │
  │ 5   ┆ 0.8165 ┆ 0.239  ┆ 0.6547 ┆ … ┆ 0.9258 ┆ 0.6876 ┆ 0.9129 ┆ 0.6175 │
  │ 6   ┆ 0.7529 ┆ 0.0    ┆ 0.7303 ┆ … ┆ 1.0541 ┆ 0.6667 ┆ 0.7928 ┆ 0.6387 │
  │ 7   ┆ 0.9344 ┆ 1.0541 ┆ 0.6424 ┆ … ┆ 0.0    ┆ 1.0541 ┆ 1.1952 ┆ 0.978  │
  │ 8   ┆ 0.8224 ┆ 0.6667 ┆ 0.5578 ┆ … ┆ 1.0541 ┆ 0.0    ┆ 1.1282 ┆ 1.118  │
  │ 9   ┆ 0.6325 ┆ 0.7928 ┆ 1.0142 ┆ … ┆ 1.1952 ┆ 1.1282 ┆ 0.0    ┆ 0.9661 │
  │ 10  ┆ 1.0967 ┆ 0.6387 ┆ 1.0377 ┆ … ┆ 0.978  ┆ 1.118  ┆ 0.9661 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-dtw]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 5.0 ┆ 5.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ 6.0 │
  │ 2   ┆ 5.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 2.0 ┆ 2.0 │
  │ 3   ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 2.0 ┆ 2.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 2.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 3.0 │
  │ 6   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 4.0 │
  │ 7   ┆ 6.0 ┆ 4.0 ┆ 2.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 2.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 4.0 │
  │ 10  ┆ 6.0 ┆ 2.0 ┆ 6.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 4.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-edit]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 6.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ 3.0 │
  │ 3   ┆ 6.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 3.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 5.0 │
  │ 6   ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 6.0 │
  │ 7   ┆ 6.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 6.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 6.0 ┆ 3.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-lcp]
  shape: (10, 11)
  ┌─────┬──────┬──────┬──────┬───┬──────┬──────┬──────┬──────┐
  │ id  ┆ 1    ┆ 2    ┆ 3    ┆ … ┆ 7    ┆ 8    ┆ 9    ┆ 10   │
  │ --- ┆ ---  ┆ ---  ┆ ---  ┆   ┆ ---  ┆ ---  ┆ ---  ┆ ---  │
  │ i64 ┆ f32  ┆ f32  ┆ f32  ┆   ┆ f32  ┆ f32  ┆ f32  ┆ f32  │
  ╞═════╪══════╪══════╪══════╪═══╪══════╪══════╪══════╪══════╡
  │ 1   ┆ 0.0  ┆ 12.0 ┆ 14.0 ┆ … ┆ 11.0 ┆ 11.0 ┆ 6.0  ┆ 15.0 │
  │ 2   ┆ 12.0 ┆ 0.0  ┆ 12.0 ┆ … ┆ 9.0  ┆ 9.0  ┆ 8.0  ┆ 13.0 │
  │ 3   ┆ 14.0 ┆ 12.0 ┆ 0.0  ┆ … ┆ 7.0  ┆ 7.0  ┆ 10.0 ┆ 13.0 │
  │ 4   ┆ 10.0 ┆ 6.0  ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 6.0  ┆ 11.0 │
  │ 5   ┆ 10.0 ┆ 8.0  ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 6.0  ┆ 11.0 │
  │ 6   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 4.0  ┆ 4.0  ┆ 7.0  ┆ 10.0 │
  │ 7   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 0.0  ┆ 4.0  ┆ 7.0  ┆ 10.0 │
  │ 8   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 4.0  ┆ 0.0  ┆ 7.0  ┆ 10.0 │
  │ 9   ┆ 6.0  ┆ 8.0  ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 0.0  ┆ 11.0 │
  │ 10  ┆ 15.0 ┆ 13.0 ┆ 13.0 ┆ … ┆ 10.0 ┆ 10.0 ┆ 11.0 ┆ 0.0  │
  └─────┴──────┴──────┴──────┴───┴──────┴──────┴──────┴──────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-lcs]
  shape: (10, 11)
  ┌─────┬──────┬─────┬─────┬───┬─────┬─────┬─────┬──────┐
  │ id  ┆ 1    ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10   │
  │ --- ┆ ---  ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ ---  │
  │ i64 ┆ f32  ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32  │
  ╞═════╪══════╪═════╪═════╪═══╪═════╪═════╪═════╪══════╡
  │ 1   ┆ 0.0  ┆ 8.0 ┆ 8.0 ┆ … ┆ 7.0 ┆ 5.0 ┆ 6.0 ┆ 11.0 │
  │ 2   ┆ 8.0  ┆ 0.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ 5.0  │
  │ 3   ┆ 8.0  ┆ 6.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 6.0 ┆ 7.0  │
  │ 4   ┆ 6.0  ┆ 6.0 ┆ 4.0 ┆ … ┆ 5.0 ┆ 3.0 ┆ 4.0 ┆ 11.0 │
  │ 5   ┆ 6.0  ┆ 4.0 ┆ 6.0 ┆ … ┆ 3.0 ┆ 5.0 ┆ 4.0 ┆ 7.0  │
  │ 6   ┆ 7.0  ┆ 5.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ 6.0  │
  │ 7   ┆ 7.0  ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 4.0 ┆ 5.0 ┆ 6.0  │
  │ 8   ┆ 5.0  ┆ 5.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 0.0 ┆ 5.0 ┆ 8.0  │
  │ 9   ┆ 6.0  ┆ 4.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ 7.0  │
  │ 10  ┆ 11.0 ┆ 5.0 ┆ 7.0 ┆ … ┆ 6.0 ┆ 8.0 ┆ 7.0 ┆ 0.0  │
  └─────┴──────┴─────┴─────┴───┴─────┴─────┴─────┴──────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-linearpairwise]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-softdtw]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-chi2]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8581 ┆ 0.5118 ┆ … ┆ 1.2472 ┆ 1.0038 ┆ 0.7746 ┆ 0.3534 │
  │ 2   ┆ 0.8581 ┆ 0.0    ┆ 0.8498 ┆ … ┆ 0.8165 ┆ 0.9258 ┆ 0.7071 ┆ 0.7205 │
  │ 3   ┆ 0.5118 ┆ 0.8498 ┆ 0.0    ┆ … ┆ 1.1952 ┆ 0.8165 ┆ 1.0    ┆ 0.3506 │
  │ 4   ┆ 0.4082 ┆ 0.9636 ┆ 0.6583 ┆ … ┆ 1.4142 ┆ 1.1952 ┆ 1.0    ┆ 0.4539 │
  │ 5   ┆ 0.5774 ┆ 1.0142 ┆ 0.4472 ┆ … ┆ 1.4142 ┆ 1.0954 ┆ 1.1547 ┆ 0.4539 │
  │ 6   ┆ 0.6876 ┆ 1.2472 ┆ 0.6424 ┆ … ┆ 1.4142 ┆ 1.0541 ┆ 1.0954 ┆ 0.7646 │
  │ 7   ┆ 1.2472 ┆ 0.8165 ┆ 1.1952 ┆ … ┆ 0.0    ┆ 0.6325 ┆ 0.8165 ┆ 1.2247 │
  │ 8   ┆ 1.0038 ┆ 0.9258 ┆ 0.8165 ┆ … ┆ 0.6325 ┆ 0.0    ┆ 0.9258 ┆ 0.956  │
  │ 9   ┆ 0.7746 ┆ 0.7071 ┆ 1.0    ┆ … ┆ 0.8165 ┆ 0.9258 ┆ 0.0    ┆ 0.9101 │
  │ 10  ┆ 0.3534 ┆ 0.7205 ┆ 0.3506 ┆ … ┆ 1.2247 ┆ 0.956  ┆ 0.9101 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-dtw]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 6.0 ┆ 4.0 ┆ 4.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 2.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 4.0 ┆ 5.0 ┆ 3.0 │
  │ 4   ┆ 6.0 ┆ 3.0 ┆ 2.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 5   ┆ 4.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 4.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 6.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-edit]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 5.0 ┆ 5.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 5.0 ┆ 4.0 │
  │ 4   ┆ 6.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 6.0 │
  │ 5   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 3.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 7.0 ┆ 4.0 ┆ 5.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-lcp]
  shape: (10, 11)
  ┌─────┬──────┬──────┬──────┬───┬──────┬──────┬──────┬──────┐
  │ id  ┆ 1    ┆ 2    ┆ 3    ┆ … ┆ 7    ┆ 8    ┆ 9    ┆ 10   │
  │ --- ┆ ---  ┆ ---  ┆ ---  ┆   ┆ ---  ┆ ---  ┆ ---  ┆ ---  │
  │ i64 ┆ f32  ┆ f32  ┆ f32  ┆   ┆ f32  ┆ f32  ┆ f32  ┆ f32  │
  ╞═════╪══════╪══════╪══════╪═══╪══════╪══════╪══════╪══════╡
  │ 1   ┆ 0.0  ┆ 14.0 ┆ 14.0 ┆ … ┆ 11.0 ┆ 11.0 ┆ 12.0 ┆ 11.0 │
  │ 2   ┆ 14.0 ┆ 0.0  ┆ 12.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 8.0  ┆ 13.0 │
  │ 3   ┆ 14.0 ┆ 12.0 ┆ 0.0  ┆ … ┆ 9.0  ┆ 9.0  ┆ 10.0 ┆ 13.0 │
  │ 4   ┆ 12.0 ┆ 10.0 ┆ 6.0  ┆ … ┆ 7.0  ┆ 7.0  ┆ 8.0  ┆ 11.0 │
  │ 5   ┆ 12.0 ┆ 10.0 ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 8.0  ┆ 11.0 │
  │ 6   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 6.0  ┆ 6.0  ┆ 7.0  ┆ 10.0 │
  │ 7   ┆ 11.0 ┆ 7.0  ┆ 9.0  ┆ … ┆ 0.0  ┆ 2.0  ┆ 5.0  ┆ 10.0 │
  │ 8   ┆ 11.0 ┆ 7.0  ┆ 9.0  ┆ … ┆ 2.0  ┆ 0.0  ┆ 5.0  ┆ 10.0 │
  │ 9   ┆ 12.0 ┆ 8.0  ┆ 10.0 ┆ … ┆ 5.0  ┆ 5.0  ┆ 0.0  ┆ 11.0 │
  │ 10  ┆ 11.0 ┆ 13.0 ┆ 13.0 ┆ … ┆ 10.0 ┆ 10.0 ┆ 11.0 ┆ 0.0  │
  └─────┴──────┴──────┴──────┴───┴──────┴──────┴──────┴──────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-lcs]
  shape: (10, 11)
  ┌─────┬──────┬──────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1    ┆ 2    ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ ---  ┆ ---  ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32  ┆ f32  ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪══════╪══════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0  ┆ 10.0 ┆ 8.0 ┆ … ┆ 9.0 ┆ 9.0 ┆ 6.0 ┆ 7.0 │
  │ 2   ┆ 10.0 ┆ 0.0  ┆ 6.0 ┆ … ┆ 3.0 ┆ 5.0 ┆ 4.0 ┆ 7.0 │
  │ 3   ┆ 8.0  ┆ 6.0  ┆ 0.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 6.0 ┆ 7.0 │
  │ 4   ┆ 6.0  ┆ 6.0  ┆ 4.0 ┆ … ┆ 7.0 ┆ 5.0 ┆ 4.0 ┆ 7.0 │
  │ 5   ┆ 6.0  ┆ 6.0  ┆ 4.0 ┆ … ┆ 7.0 ┆ 5.0 ┆ 6.0 ┆ 5.0 │
  │ 6   ┆ 5.0  ┆ 7.0  ┆ 5.0 ┆ … ┆ 6.0 ┆ 4.0 ┆ 5.0 ┆ 6.0 │
  │ 7   ┆ 9.0  ┆ 3.0  ┆ 7.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 8.0 │
  │ 8   ┆ 9.0  ┆ 5.0  ┆ 7.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 3.0 ┆ 6.0 │
  │ 9   ┆ 6.0  ┆ 4.0  ┆ 6.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 7.0  ┆ 7.0  ┆ 7.0 ┆ … ┆ 8.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴──────┴──────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-linearpairwise]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-softdtw]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[chi2]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ seq_1   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.0    ┆ 0.6325 │
  │ seq_2   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.6325 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[dtw]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[edit]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[lcp]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 3.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 3.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[lcs]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[linearpairwise]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[softdtw]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestConfigRoundtrip.test_to_config_snapshot
  dict({
    'settings': dict({
      'agg_fun': 'sum',
      'sequence_metrics': None,
      'weights': None,
    }),
    'type': 'aggregation',
  })
# ---
